--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-- course: BSc Computer Science
-  institute: University of Birmingham
-  dates: 2018 - 2021
+- course: imtech Computer Science
+  institute: IIITB
+  dates: 2019 - 2024
   logo: uob.png
   
 - course: Pre Fellowship Fellow
