--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,8 +3,8 @@
   dates: 2019 - 2024
   logo: uob.png
   
-- course: Pre Fellowship Fellow
-  institute: MLH Fellowship
-  dates: Summer 2021
+- course: imtech Computer Science
+  institute: IIITB
+  dates: 2019 -2024
   logo: fellowship.svg
   
