--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   dates: 2019 - 2024
   logo: uob.png
   
-- course: imtech Computer Science
+- course: imtech CSE
   institute: IIITB
   dates: 2019 -2024
   logo: fellowship.svg
